2015-12-26  Gabriel Dos Reis  <gdr@axiomatics.org>

	* interp/nruncomp.boot (buildFunctor): Remove use of
	$ConstantAssignments. 
	* interp/functor.boot (DescendCode): Remove dead and bogus code
	for constant creation.
	(ConstantCreator): Remove.

2015-12-26  Gabriel Dos Reis  <gdr@axiomatics.org>

	* interp/functor.boot (addConditionToGuard): New.  Split out of
	DescendCode. 
	(viewsUnderCondition): Likewise.

2015-12-26  Gabriel Dos Reis  <gdr@axiomatics.org>
	* interp/vmlisp.lisp (LASTELEM): Remove as unused.

2015-12-26  Gabriel Dos Reis  <gdr@axiomatics.org>

	* interp/vmlisp.lisp (dispatchFunction): Remove.  Adjust users.
	* interp/c-util.boot (lookupDefiningFunction): Use opcode
	'%function' in lieu of 'dispatchFunction'.
	* interp/define.boot (doIt): Likewise.
	* interp/nruncomp.boot (descendCodeTran): Likewise.
	* interp/showimp.boot (dcOpPrint): Likewise.

2015-12-25  Gabriel Dos Reis  <gdr@axiomatics.org>

	* boot/tokens.boot: Do not rename 'apply'.

2015-12-24  Gabriel Dos Reis  <gdr@axiomatics.org>

	* boot/ast.boot (translateForm): New.
	* boot/translator.boot (translateToplevel): Use it.
	* boot/utility.boot (lastItem, lispMap, lispMap!, butLast,
	butLast!): New. 

2015-12-23  Gabriel Dos Reis  <gdr@axiomatics.org>

	* interp/lisplib.boot (lisplibDoRename): Retain generated Lisp
	file if asked.
	* lisp/core.lisp.in ($LispFileType): Export.
	* boot/translator.boot (retainFile?): Likewise.

2014-11-20  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* interp/lisplib.boot (lisplibDoRename): Fix thinko.

2014-11-20  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* lisp/core.lisp.in (forkStreamByName): New.
	* interp/int-top.boot (ncIntLoop): Use it.
	* interp/spad-parser.boot (parseSpadFile): Likewise.
	* interp/sys-globals.boot: Likewise.
	* interp/sys-macros.lisp (quietlyIfInteractive): Likewise.
	* interp/vmlisp.lisp (MAKE-INSTREAM): Likewise.
	(MAKE-OUTSTREAM): Likewise.
	(DEFIOSTREAM): Likewise.
